--- a/Quad_step_motor.ioc
+++ b/Quad_step_motor.ioc
@@ -12,11 +12,10 @@ Mcu.IP1=RCC
 Mcu.IP2=SPI2
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=TIM4
-Mcu.IP7=USART1
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP5=TIM4
+Mcu.IP6=USART1
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
@@ -64,14 +63,17 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=VD12
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA0-WKUP.Signal=GPIO_Output
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=VD34
 PA1.Locked=true
-PA1.Signal=S_TIM2_CH2
+PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA12.GPIOParameters=GPIO_Label
@@ -86,12 +88,18 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=FOCUS_PI_CO
 PA15.Locked=true
 PA15.Signal=GPIO_Input
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=VD56
 PA2.Locked=true
-PA2.Signal=S_TIM2_CH3
+PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=VD78
 PA3.Locked=true
-PA3.Signal=S_TIM2_CH4
+PA3.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=VD9A
 PA6.Locked=true
-PA6.Signal=S_TIM3_CH1
+PA6.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=MS_RSTB
 PA8.Locked=true
@@ -197,16 +205,6 @@ RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=64000000
 RCC.USBFreq_Value=64000000
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Output Compare1 CH1
-SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,Output Compare2 CH2
-SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3,Output Compare3 CH3
-SH.S_TIM2_CH3.ConfNb=1
-SH.S_TIM2_CH4.0=TIM2_CH4,Output Compare4 CH4
-SH.S_TIM2_CH4.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,Output Compare1 CH1
-SH.S_TIM3_CH1.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI2.CLKPhase=SPI_PHASE_2EDGE
 SPI2.CLKPolarity=SPI_POLARITY_HIGH
@@ -216,16 +214,9 @@ SPI2.FirstBit=SPI_FIRSTBIT_LSB
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase,CLKPolarity,FirstBit
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-TIM2.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM2.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM2.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
-TIM2.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Period,Prescaler,Channel-Output Compare1 CH1,Channel-Output Compare2 CH2,Channel-Output Compare3 CH3,Channel-Output Compare4 CH4
+TIM2.IPParameters=Period,Prescaler
 TIM2.Period=999
-TIM2.Prescaler=72-1
-TIM3.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-Output Compare1 CH1,Prescaler
-TIM3.Prescaler=64
+TIM2.Prescaler=64-1
 TIM4.IPParameters=Prescaler,Period
 TIM4.Period=999
 TIM4.Prescaler=64-1
