--- a/Quad_step_motor.ioc
+++ b/Quad_step_motor.ioc
@@ -12,10 +12,11 @@ Mcu.IP1=RCC
 Mcu.IP2=SPI2
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
-Mcu.IP5=TIM4
-Mcu.IP6=USART1
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=USART1
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
@@ -38,7 +39,8 @@ Mcu.Pin23=PB8
 Mcu.Pin24=PB9
 Mcu.Pin25=VP_SYS_VS_Systick
 Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA6
 Mcu.Pin5=PB10
@@ -46,7 +48,7 @@ Mcu.Pin6=PB11
 Mcu.Pin7=PB12
 Mcu.Pin8=PB13
 Mcu.Pin9=PB14
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -63,8 +65,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=VD12
@@ -85,7 +89,7 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.GPIOParameters=GPIO_Label
-PA15.GPIO_Label=FOCUS_PI_CO
+PA15.GPIO_Label=ZOOM1_PI_CO
 PA15.Locked=true
 PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
@@ -126,11 +130,11 @@ PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=ZOOM2_PI_CO
+PB3.GPIO_Label=FOCUS_PI_CO
 PB3.Locked=true
 PB3.Signal=GPIO_Input
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=ZOOM1_PI_CO
+PB4.GPIO_Label=ZOOM2_PI_CO
 PB4.Locked=true
 PB4.Signal=GPIO_Input
 PB5.GPIOParameters=GPIO_Label
@@ -185,7 +189,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -220,14 +224,18 @@ TIM2.Prescaler=64-1
 TIM4.IPParameters=Prescaler,Period
 TIM4.Period=999
 TIM4.Prescaler=64-1
-USART1.IPParameters=VirtualMode
+USART1.BaudRate=2000000
+USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-USART3.IPParameters=VirtualMode
+USART3.BaudRate=9600
+USART3.IPParameters=VirtualMode,BaudRate
 USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
